@@ -34,6 +34,7 @@ PHP                                                                        NEWS
   . array_diff_uassoc(). (Andrey)
   . convert_uuencode(). (Ilia)
   . convert_uudecode(). (Ilia)
+  . substr_compare(). (Ilia)
   . pcntl_wait(). (GeorgeS)
 - Added "resume_pos" context option to "ftp://" wrapper. (Sara)
 - Added optional parameter to OCIWriteTemporaryLob() to specify the type of LOB
